src/main/gen/ch/qligier/jetbrains/plugin/fss/fsh/antlr/FSHParser.java
// Generated from ch/qligier/jetbrains/plugin/fss/fsh/antlr/FSH.g4 by ANTLR 4.13.1
package ch.qligier.jetbrains.plugin.fss.fsh.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FSHParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_ALIAS=1, KW_PROFILE=2, KW_EXTENSION=3, KW_INSTANCE=4, KW_INSTANCEOF=5, 
		KW_INVARIANT=6, KW_VALUESET=7, KW_CODESYSTEM=8, KW_RULESET=9, KW_MAPPING=10, 
		KW_LOGICAL=11, KW_RESOURCE=12, KW_PARENT=13, KW_ID=14, KW_TITLE=15, KW_DESCRIPTION=16, 
		KW_EXPRESSION=17, KW_XPATH=18, KW_SEVERITY=19, KW_USAGE=20, KW_SOURCE=21, 
		KW_TARGET=22, KW_CONTEXT=23, KW_CHARACTERISTICS=24, KW_MOD=25, KW_MS=26, 
		KW_SU=27, KW_TU=28, KW_NORMATIVE=29, KW_DRAFT=30, KW_FROM=31, KW_EXAMPLE=32, 
		KW_PREFERRED=33, KW_EXTENSIBLE=34, KW_REQUIRED=35, KW_CONTAINS=36, KW_NAMED=37, 
		KW_AND=38, KW_ONLY=39, KW_OR=40, KW_OBEYS=41, KW_TRUE=42, KW_FALSE=43, 
		KW_INCLUDE=44, KW_EXCLUDE=45, KW_CODES=46, KW_WHERE=47, KW_VSREFERENCE=48, 
		KW_SYSTEM=49, KW_EXACTLY=50, KW_INSERT=51, KW_CONTENTREFERENCE=52, EQUAL=53, 
		STAR=54, COLON=55, COMMA=56, ARROW=57, LEFT_PAREN=58, RIGHT_PAREN=59, 
		STRING=60, MULTILINE_STRING=61, NUMBER=62, UNIT=63, CODE=64, CONCEPT_STRING=65, 
		DATETIME=66, TIME=67, CARD=68, REFERENCE=69, CODEABLE_REFERENCE=70, CANONICAL=71, 
		CARET_SEQUENCE=72, REGEX=73, BLOCK_COMMENT=74, SEQUENCE=75, WHITESPACE=76, 
		LINE_COMMENT=77, PARAM_RULESET_REFERENCE=78, RULESET_REFERENCE=79, BRACKETED_PARAM=80, 
		LAST_BRACKETED_PARAM=81, PLAIN_PARAM=82, LAST_PLAIN_PARAM=83, QUOTED_CONTEXT=84, 
		LAST_QUOTED_CONTEXT=85, UNQUOTED_CONTEXT=86, LAST_UNQUOTED_CONTEXT=87, 
		CONTEXT_WHITESPACE=88, CODE_ITEM=89, LAST_CODE_ITEM=90, CODE_LIST_WHITESPACE=91;
	public static final int
		RULE_doc = 0, RULE_entity = 1, RULE_alias = 2, RULE_profile = 3, RULE_extension = 4, 
		RULE_logical = 5, RULE_resource = 6, RULE_sdMetadata = 7, RULE_sdRule = 8, 
		RULE_lrRule = 9, RULE_instance = 10, RULE_instanceMetadata = 11, RULE_instanceRule = 12, 
		RULE_invariant = 13, RULE_invariantMetadata = 14, RULE_invariantRule = 15, 
		RULE_valueSet = 16, RULE_vsMetadata = 17, RULE_vsRule = 18, RULE_codeSystem = 19, 
		RULE_csMetadata = 20, RULE_csRule = 21, RULE_ruleSet = 22, RULE_ruleSetRule = 23, 
		RULE_paramRuleSet = 24, RULE_paramRuleSetRef = 25, RULE_parameter = 26, 
		RULE_lastParameter = 27, RULE_paramRuleSetContent = 28, RULE_mapping = 29, 
		RULE_mappingMetadata = 30, RULE_mappingEntityRule = 31, RULE_parent = 32, 
		RULE_id = 33, RULE_title = 34, RULE_description = 35, RULE_expression = 36, 
		RULE_xpath = 37, RULE_severity = 38, RULE_instanceOf = 39, RULE_usage = 40, 
		RULE_source = 41, RULE_target = 42, RULE_context = 43, RULE_contextItem = 44, 
		RULE_lastContextItem = 45, RULE_characteristics = 46, RULE_cardRule = 47, 
		RULE_flagRule = 48, RULE_valueSetRule = 49, RULE_fixedValueRule = 50, 
		RULE_containsRule = 51, RULE_onlyRule = 52, RULE_obeysRule = 53, RULE_caretValueRule = 54, 
		RULE_codeCaretValueRule = 55, RULE_mappingRule = 56, RULE_insertRule = 57, 
		RULE_codeInsertRule = 58, RULE_addCRElementRule = 59, RULE_addElementRule = 60, 
		RULE_pathRule = 61, RULE_vsComponent = 62, RULE_vsConceptComponent = 63, 
		RULE_vsFilterComponent = 64, RULE_vsComponentFrom = 65, RULE_vsFromSystem = 66, 
		RULE_vsFromValueset = 67, RULE_vsFilterList = 68, RULE_vsFilterDefinition = 69, 
		RULE_vsFilterOperator = 70, RULE_vsFilterValue = 71, RULE_name = 72, RULE_path = 73, 
		RULE_caretPath = 74, RULE_flag = 75, RULE_strength = 76, RULE_value = 77, 
		RULE_item = 78, RULE_code = 79, RULE_concept = 80, RULE_quantity = 81, 
		RULE_ratio = 82, RULE_reference = 83, RULE_referenceType = 84, RULE_codeableReferenceType = 85, 
		RULE_canonical = 86, RULE_ratioPart = 87, RULE_bool = 88, RULE_targetType = 89, 
		RULE_mostAlphaKeywords = 90;
	private static String[] makeRuleNames() {
		return new String[] {
			"doc", "entity", "alias", "profile", "extension", "logical", "resource", 
			"sdMetadata", "sdRule", "lrRule", "instance", "instanceMetadata", "instanceRule", 
			"invariant", "invariantMetadata", "invariantRule", "valueSet", "vsMetadata", 
			"vsRule", "codeSystem", "csMetadata", "csRule", "ruleSet", "ruleSetRule", 
			"paramRuleSet", "paramRuleSetRef", "parameter", "lastParameter", "paramRuleSetContent", 
			"mapping", "mappingMetadata", "mappingEntityRule", "parent", "id", "title", 
			"description", "expression", "xpath", "severity", "instanceOf", "usage", 
			"source", "target", "context", "contextItem", "lastContextItem", "characteristics", 
			"cardRule", "flagRule", "valueSetRule", "fixedValueRule", "containsRule", 
			"onlyRule", "obeysRule", "caretValueRule", "codeCaretValueRule", "mappingRule", 
			"insertRule", "codeInsertRule", "addCRElementRule", "addElementRule", 
			"pathRule", "vsComponent", "vsConceptComponent", "vsFilterComponent", 
			"vsComponentFrom", "vsFromSystem", "vsFromValueset", "vsFilterList", 
			"vsFilterDefinition", "vsFilterOperator", "vsFilterValue", "name", "path", 
			"caretPath", "flag", "strength", "value", "item", "code", "concept", 
			"quantity", "ratio", "reference", "referenceType", "codeableReferenceType", 
			"canonical", "ratioPart", "bool", "targetType", "mostAlphaKeywords"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'?!'", "'MS'", "'SU'", "'TU'", "'N'", "'D'", "'from'", null, null, 
			null, null, "'contains'", "'named'", "'and'", "'only'", "'or'", "'obeys'", 
			"'true'", "'false'", "'include'", "'exclude'", "'codes'", "'where'", 
			"'valueset'", "'system'", null, "'insert'", "'contentReference'", "'='", 
			null, "':'", "','", "'->'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_ALIAS", "KW_PROFILE", "KW_EXTENSION", "KW_INSTANCE", "KW_INSTANCEOF", 
			"KW_INVARIANT", "KW_VALUESET", "KW_CODESYSTEM", "KW_RULESET", "KW_MAPPING", 
			"KW_LOGICAL", "KW_RESOURCE", "KW_PARENT", "KW_ID", "KW_TITLE", "KW_DESCRIPTION", 
			"KW_EXPRESSION", "KW_XPATH", "KW_SEVERITY", "KW_USAGE", "KW_SOURCE", 
			"KW_TARGET", "KW_CONTEXT", "KW_CHARACTERISTICS", "KW_MOD", "KW_MS", "KW_SU", 
			"KW_TU", "KW_NORMATIVE", "KW_DRAFT", "KW_FROM", "KW_EXAMPLE", "KW_PREFERRED", 
			"KW_EXTENSIBLE", "KW_REQUIRED", "KW_CONTAINS", "KW_NAMED", "KW_AND", 
			"KW_ONLY", "KW_OR", "KW_OBEYS", "KW_TRUE", "KW_FALSE", "KW_INCLUDE", 
			"KW_EXCLUDE", "KW_CODES", "KW_WHERE", "KW_VSREFERENCE", "KW_SYSTEM", 
			"KW_EXACTLY", "KW_INSERT", "KW_CONTENTREFERENCE", "EQUAL", "STAR", "COLON", 
			"COMMA", "ARROW", "LEFT_PAREN", "RIGHT_PAREN", "STRING", "MULTILINE_STRING", 
			"NUMBER", "UNIT", "CODE", "CONCEPT_STRING", "DATETIME", "TIME", "CARD", 
			"REFERENCE", "CODEABLE_REFERENCE", "CANONICAL", "CARET_SEQUENCE", "REGEX", 
			"BLOCK_COMMENT", "SEQUENCE", "WHITESPACE", "LINE_COMMENT", "PARAM_RULESET_REFERENCE", 
			"RULESET_REFERENCE", "BRACKETED_PARAM", "LAST_BRACKETED_PARAM", "PLAIN_PARAM", 
			"LAST_PLAIN_PARAM", "QUOTED_CONTEXT", "LAST_QUOTED_CONTEXT", "UNQUOTED_CONTEXT", 
			"LAST_UNQUOTED_CONTEXT", "CONTEXT_WHITESPACE", "CODE_ITEM", "LAST_CODE_ITEM", 
			"CODE_LIST_WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FSH.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FSHParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FSHParser.EOF, 0); }
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public DocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterDoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitDoc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FSHVisitor ) return ((FSHVisitor<? extends T>)visitor).visitDoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocContext doc() throws RecognitionException {
		DocContext _localctx = new DocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8158L) != 0)) {
				{
				{
				setState(182);
				entity();
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(188);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntityContext extends ParserRuleContext {
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public ProfileContext profile() {
			return getRuleContext(ProfileContext.class,0);
		}
		public ExtensionContext extension() {
			return getRuleContext(ExtensionContext.class,0);
		}
		public InvariantContext invariant() {
			return getRuleContext(InvariantContext.class,0);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public ValueSetContext valueSet() {
			return getRuleContext(ValueSetContext.class,0);
		}
		public CodeSystemContext codeSystem() {
			return getRuleContext(CodeSystemContext.class,0);
		}
		public RuleSetContext ruleSet() {
			return getRuleContext(RuleSetContext.class,0);
		}
		public ParamRuleSetContext paramRuleSet() {
			return getRuleContext(ParamRuleSetContext.class,0);
		}
		public MappingContext mapping() {
			return getRuleContext(MappingContext.class,0);
		}
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitEntity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FSHVisitor ) return ((FSHVisitor<? extends T>)visitor).visitEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entity);
		try {
			setState(202);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				alias();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				profile();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				extension();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(193);
				invariant();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(194);
				instance();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(195);
				valueSet();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(196);
				codeSystem();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(197);
				ruleSet();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(198);
				paramRuleSet();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(199);
				mapping();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(200);
				logical();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(201);
				resource();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasContext extends ParserRuleContext {
		public TerminalNode KW_ALIAS() { return getToken(FSHParser.KW_ALIAS, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(FSHParser.EQUAL, 0); }
		public TerminalNode SEQUENCE() { return getToken(FSHParser.SEQUENCE, 0); }
		public TerminalNode CODE() { return getToken(FSHParser.CODE, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FSHVisitor ) return ((FSHVisitor<? extends T>)visitor).visitAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(KW_ALIAS);
			setState(205);
			name();
			setState(206);
			match(EQUAL);
			setState(207);
			_la = _input.LA(1);
			if ( !(_la==CODE || _la==SEQUENCE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProfileContext extends ParserRuleContext {
		public TerminalNode KW_PROFILE() { return getToken(FSHParser.KW_PROFILE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<SdMetadataContext> sdMetadata() {
			return getRuleContexts(SdMetadataContext.class);
		}
		public SdMetadataContext sdMetadata(int i) {
			return getRuleContext(SdMetadataContext.class,i);
		}
		public List<SdRuleContext> sdRule() {
			return getRuleContexts(SdRuleContext.class);
		}
		public SdRuleContext sdRule(int i) {
			return getRuleContext(SdRuleContext.class,i);
		}
		public ProfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_profile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterProfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitProfile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FSHVisitor ) return ((FSHVisitor<? extends T>)visitor).visitProfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProfileContext profile() throws RecognitionException {
		ProfileContext _localctx = new ProfileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_profile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			match(KW_PROFILE);
			setState(210);
			name();
			setState(212); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(211);
				sdMetadata();
				}
				}
				setState(214); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 122880L) != 0) );
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR) {
				{
				{
				setState(216);
				sdRule();
				}
				}
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExtensionContext extends ParserRuleContext {
		public TerminalNode KW_EXTENSION() { return getToken(FSHParser.KW_EXTENSION, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<SdMetadataContext> sdMetadata() {
			return getRuleContexts(SdMetadataContext.class);
		}
		public SdMetadataContext sdMetadata(int i) {
			return getRuleContext(SdMetadataContext.class,i);
		}
		public List<ContextContext> context() {
			return getRuleContexts(ContextContext.class);
		}
		public ContextContext context(int i) {
			return getRuleContext(ContextContext.class,i);
		}
		public List<SdRuleContext> sdRule() {
			return getRuleContexts(SdRuleContext.class);
		}
		public SdRuleContext sdRule(int i) {
			return getRuleContext(SdRuleContext.class,i);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterExtension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitExtension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FSHVisitor ) return ((FSHVisitor<? extends T>)visitor).visitExtension(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtensionContext extension() throws RecognitionException {
		ExtensionContext _localctx = new ExtensionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_extension);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			match(KW_EXTENSION);
			setState(223);
			name();
			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8511488L) != 0)) {
				{
				setState(226);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_PARENT:
				case KW_ID:
				case KW_TITLE:
				case KW_DESCRIPTION:
					{
					setState(224);
					sdMetadata();
					}
					break;
				case KW_CONTEXT:
					{
					setState(225);
					context();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(234);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR) {
				{
				{
				setState(231);
				sdRule();
				}
				}
				setState(236);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
